k8s/balancer.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "yc-clusterissuer"
spec:
  tls:
    - hosts:
        - ratemap.ru
      secretName: domain-name-secret
  rules:
    - host: ratemap.ru
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: ratemap-backend
                port:
                  number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ratemap-backend
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: ratemap-backend
    spec:
      containers:
        - name: ratemap-backend-container
          image: docker.io/dmitry4k/ratemap:backend-v0.0.4
          ports:
            - name: http
              containerPort: 8080
      imagePullSecrets:
        - name: regcred
  selector:
    matchLabels:
      app: ratemap-backend
---
apiVersion: v1
kind: Service
metadata:
  name: ratemap-backend
spec:
  selector:
    app: ratemap-backend
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30080
